<package format="2">
    <name>graph_localization</name>
    <version>0.1.0</version>
    <description>Robot localization based on GTSAM factor graph optimization.</description>
    <maintainer email="gregjm@umich.edu">Gregory Meyer</maintainer>
    <license>BSD 3-Clause License</license>

    <url type="repository">https://github.com/umigv/graph_localization</url>
    <author>Gregory Meyer</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
</package>
